// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Batch's trackEvent destination action: all fields 1`] = `
Array [
  Object {
    "events": Array [
      Object {
        "attributes": Object {},
        "name": "8HZCkO#V",
      },
    ],
    "identifiers": Object {
      "custom_id": "8HZCkO#V",
    },
  },
]
`;

exports[`Testing snapshot for Batch's trackEvent destination action: required fields 1`] = `
Array [
  Object {
    "events": Array [],
    "identifiers": Object {
      "custom_id": "8HZCkO#V",
    },
  },
]
`;
